examples/smlfmt-1.2.0/test/fail/string-escape-4.sml
val str =
  "hello there, \
  \how are you doing today \?
  \buddy"
